--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,9 +8,9 @@ layout: default
 
 <div class="PageNavigation">
   {% if page.previous.url %}
-    <a class="prev" href="{{page.previous.url}}">&laquo; Prev</a>
+    <a class="prev" href="{{site.url}}{{page.previous.url}}">&laquo; Prev</a>
   {% endif %}
   {% if page.next.url %}
-    <a class="next" href="{{page.next.url}}">Next &raquo;</a>
+    <a class="next" href="{{site.url}}{{page.next.url}}">Next &raquo;</a>
   {% endif %}
 </div>
