--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer">
 		<div class="small-12 columns">
-			<span class="darkgray">© 2014-{{ 'now' | date: "%Y" }} Andrew Howard</span>
+			<span class="darkgray">© {{ 'now' | date: "%Y" }} Andrew Howard</span>
 		</div>
 </footer>
