--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 
   <link href="{{ site.url | append: site.baseurl }}/css/main.css" media="screen, projection" rel="stylesheet" type="text/css">
   <link href="{{ site.url | append: site.baseurl }}/css/custom.css" media="screen, projection" rel="stylesheet" type="text/css">
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.baseurl | prepend: site.url  }}">
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.url }}/feed.xml"/>
   <link rel="shortcut icon" type="image/png" href="{{site.url}}/favicon.png">
 </head>
