--- a/css/custom.scss
+++ b/css/custom.scss
@@ -81,3 +81,21 @@ div.download-link a:hover {
     font-size: 1.5em; 
   }
 }
+
+.section {
+  margin-bottom: 35px;
+}
+.vertical-centering .main-content{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.vertical-centering .post-content {
+  max-width: 1000px;
+  text-align: center;
+}
+
+.vertical-centering .wrap {
+  padding-top: 0!important;
+  }
