--- a/_layouts/topic.html
+++ b/_layouts/topic.html
@@ -10,7 +10,7 @@ layout: tutorials
     {% assign sorted_tutorials = tutorials | sort: "order" %}
     {% for tutorial in sorted_tutorials %}
     <li>
-	<a href="{{site.url}}{{tutorial.url}}">{{tutorial.title}}</a>
+	<a href="{{tutorial.url | prepend: site.baseurl | prepend: site.url}}">{{tutorial.title}}</a>
     </li>
     {% endfor %}
 </ul>
