--- a/css/custom.scss
+++ b/css/custom.scss
@@ -98,4 +98,8 @@ div.download-link a:hover {
 
 .vertical-centering .wrap {
   padding-top: 0!important;
-  }
+}
+
+.tutorial-content img {
+  margin-bottom: 1.5em;
+}
